# Quant-Aero-Log

./: .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  alg_signal.py  angles_metrics.py  benchmark_eval.py  compute_analytics.py  config_env.py  db_connector.py  debug_main.py  debug_tests.py  docker-compose.yml  generate_data.py  hamiltonian_numpy.py  hamiltonian_tf.py  init.sql  java_bridge.py  label_generator.py  log_signal.py  main.py  model_train.py  multi_timeframe.py  plot_signals.py  pyproject.toml  requirements.txt  run_java.sh  scheduler_loop.py  signal_labeler.py  snapshot_writer.py  start.sh
algorithms/: __init__.py  algorithm_support.py  astar_algorithm.py  dijkstra_correlation.py  grover_search.py  kmeans_clustering.py  predictive_analysis.py  quantum_trigonometric.py
api_clients/: __init__.py  alpaca_feed.py  api_router.py  auth_keys.py  binance_fetch.py  news_feed_handler.py  polygon_adapter.py  yfinance_adapter.py
k8s/: deployment.yml
models/: ensemble_stack.py  evaluation_metrics.py  model_dependencies.md  model_loader.py  model_manager.py  training_pipeline.py  xgb_infer.py
monitoring/: __init__.py  metrics.py  performance_monitor.py
physics/: __init__.py  critical_lattice_resolver.py  dissection_hamiltonian.py  multi_hamiltonian_coalescer.py  quantum_algorithms.py  quantum_state.py  quantum_state_manager.py  quantum_wave_interference.py  simulated_annealing.py  test_simulated_annealing.py  twisted_hamiltonian.py
redis/: redis.conf
risk/: correlation_analyzer.py  drawdown_manager.py  market_regime.py  performance_analyzer.py  portfolio_optimizer.py  position_sizing.py  risk_allocator.py  risk_controller.py  risk_metrics.py  risk_monitor.py  risk_reporting.py  stop_loss.py  volatility_manager.py
storage/: __init__.py  backup_manager.py  connection_pool.py  db_manager.py  init_db_schema.py  pg_reader.py  pg_writer.py  query_optimizer.py  schema_optimizer.py  snapshot_rotator.py
(+37 files in other folders)
